[package]
name = "media-inspector"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "MediaInspector"
path = "src/main.rs"

[dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_Controls",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Memory",
    "Win32_UI_Input_KeyboardAndMouse",
] }
serde_json = "1"

[build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = "z"
lto = true
strip = true
